# VF-Project

./: .gitignore  README.md  pyproject.toml  run_nnenum.py
LaTeX/: project.tex  references.bib
Marabou/: marabou-notes.md
Marabou/Marabou_docker/: Dockerfile  out.csv  run_all_categories.sh  run_in_docker.sh  run_single_instance.sh
Marabou/Marabou_docker/scripts/: out.csv
Marabou/Marabou_docker/scripts/vnncomp_scripts/: install_tool.sh  prepare_instance.sh
alpha-beta/: Dockerfile  error_missing_onnxfile.txt  run_all_categories.sh  run_in_docker.sh  run_single_instance.sh  saved_result_cpu.csv  saved_result_cuda.csv
alpha-beta/scripts/vnncomp_scripts/: install_tool.sh  prepare_instance.sh  run_instance.sh
nnenum/: docker-compose.yml  results.csv  results.txt  run_nnenum.py
