[tool.poetry]
name = "vf-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vf_project"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.7"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
